verification_output_v5.txt
/Users/ikymasie/Documents/GitHub/KIKA/node_modules/ts-node/src/index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: тип Unable to compile TypeScript:
src/services/RegistrationService.ts(255,5): error TS1128: Declaration or statement expected.

    at createTSError (/Users/ikymasie/Documents/GitHub/KIKA/node_modules/ts-node/src/index.ts:859:12)
    at reportTSError (/Users/ikymasie/Documents/GitHub/KIKA/node_modules/ts-node/src/index.ts:863:19)
    at getOutput (/Users/ikymasie/Documents/GitHub/KIKA/node_modules/ts-node/src/index.ts:1077:36)
    at Object.compile (/Users/ikymasie/Documents/GitHub/KIKA/node_modules/ts-node/src/index.ts:1433:41)
    at Module.m._compile (/Users/ikymasie/Documents/GitHub/KIKA/node_modules/ts-node/src/index.ts:1617:30)
    at loadTS (node:internal/modules/cjs/loader:1826:10)
    at Object.require.extensions.<computed> [as .ts] (/Users/ikymasie/Documents/GitHub/KIKA/node_modules/ts-node/src/index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1469:32)
    at Module._load (node:internal/modules/cjs/loader:1286:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14) {
  diagnosticCodes: [ 1128 ]
}
